--- a/app/views/personas/_familiar_fields.html.erb
+++ b/app/views/personas/_familiar_fields.html.erb
@@ -1,6 +1,7 @@
 <div class="panel panel-default nested-fields">
   <div class="panel-heading">
     Familiar
+    <%=@persona.errors.keys%>
     <div class="pull-right"><%=link_to_remove_association raw('<i class="fa fa-times"></i>'), f%></div>
   </div>
   <div class="panel-body">
@@ -10,7 +11,7 @@
         <span class="input-group-btn" >
           <%  d =(Familiar._attr_readonly.include?("tipo_de_cedula") and f.object.id.nil? == false) ? "disabled" : " "%>
 
-          <%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},class: "btn btn-default dropdown-toggle",style: "padding:5.5px 12px;","#{d}": true) %>
+          <%= f.select(:tipo_de_cedula, options_for_select($dic["tipos_de_cedula"], @persona.tipo_de_cedula),{},class: "btn btn-default dropdown-toggle",style: "padding:5.5px 12px;width:60px;","#{d}": true) %>
         </span>
         <%  d =(Familiar._attr_readonly.include?("cedula") and f.object.id.nil? == false) ? "disabled" : " "%>
         <%= f.telephone_field :cedula ,class: "form-control",label: false, error: "Campo obligarotio.",maxlength: "8", pattern:"[0-9]{8}","data-toggle"=>"popover", "data-trigger"=>"focus", "data-placement"=>"top", title: "Número de Cédula",
