--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -24,7 +24,9 @@
         <td><%= persona.cargo.nombre.upcase %></td>
         <td><%= persona.cargo.departamento.nombre.upcase %></td>
         <td><%= persona.cargo.tipo.nombre.upcase %></td>
-        <td>
+  <td>
+        <% if persona.status!="retirado" %>
+
           <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
             <%= link_to ' Recibo', persona_path(persona,format: "pdf")+"?doc=0","target": "_blank",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte" %>
             <%= link_to '', persona_path(persona,format: "pdf")+"?doc=1","target": "_blank",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
@@ -33,6 +35,10 @@
             <%= link_to ' Constancia', persona_path(persona,format: "pdf")+"?doc=2","target": "_blank",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar constancia de trabajo" %>
             <%= link_to '', persona_path(persona,format: "pdf")+"?doc=3","target": "_blank",class: "btn btn-default fa fa-leaf reportes","data-toggle": "tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
           </div>
+
+        <%else%>
+        <span class="fa fa-ban"></span>
+        <%end%>
         </td>
         <td>
 
