--- a/app/views/layouts/_errores.html.erb
+++ b/app/views/layouts/_errores.html.erb
@@ -1,18 +1,33 @@
 <% if x.errors.any? %>
-<div class="alert alert-danger alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert">
-    <span aria-hidden="true">&times;</span>
-    <span class="sr-only">Close</span>
-  </button>
-    <h3>No ha podido ser guardado por:
-        <%= pluralize(x.errors.count, "error") %>.</h3>
+<div class="alert alert-danger alert-dismissible row" role="alert">
+    <div class="col-md-12">
+      <button type="button" class="close pull-right" data-dismiss="alert">
+          <span aria-hidden="true">&times;</span>
+          <span class="sr-only">Close</span>
+      </button>
+        <h3>
+            <i class="fa fa-exclamation-triangle"></i>
+            No ha podido ser guardado por:
+            <%= pluralize(x.errors.count, "error") %>.</h3>
 
-    <ul>
-        <% x.errors.full_messages.each do |message| %>
-        <li><%= raw message %></li>
+    </div>
+
+    <% x.errors.to_hash.each do |key,value| %>
+    <div class="col-md-6">
+
+
+           <i class="fa fa-exclamation"></i>
+           <b><%= t(key).capitalize %></b>
+
+<ul>
+        <%  value.each do |mensaje|%>
+        <li >
+            <%=mensaje.capitalize%>.</li>
         <% end %>
-    </ul>
+</ul>
+    </div>
 
+    <% end %>
 
 </div>
 <% end %>
